[package]
name = "tktest"
version = "0.1.0"
edition = "2024"

[dependencies]
tcl = "0.1.9"
tk = "0.1.10"

[[bin]]
name = "ex2"
test = false
bench = false
path = "src/ex2.rs"

[[example]]
name = "ex1"
test = false
bench = false
path = "src/ex1.rs"

[[example]]
name = "ex2-orig"
test = false
bench = false
path = "src/ex2-orig.rs"

[[example]]
name = "configuration_options"
test = false
bench = false
